# wordsearchrs

./: Cargo.toml  README.md
src/: generate.rs  wordsearch.rs
