[package]
name = "wordsearchrs"
version = "0.1.0"
authors = ["Huw Jones <huw@huwcbjones.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.20"
rand = "0.7.3"

[[bin]]
name = "generate"
path = "src/generate.rs"

[[bin]]
name = "wordsearch"
path = "src/wordsearch.rs"
